--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default
-quarkus.datasource.db-kind=h2
+quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+mp.jwt.verify.publickey.location=https://raw.githubusercontent.com/eldermoraes/unipds/main/jwt-token/quarkus.jwt.pub
+mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
+
+quarkus.datasource.jdbc.telemetry=true
